--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "stripe": "^20.1.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
